--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,22 +18,30 @@ a {
 }
 
 a:hover {
-  text-decoration: underline;
+  color: #48827F;
 }
 
 img {
-  max-width: 100%;
+  /* max-width: 100%; */
+  max-width: 36rem;
   display: block;
 }
 
 button {
   background-color: white;
-  font-size: 15px;
   border: 1px solid #0070f3;
   border-radius: 5px;
+  color: #0070f3;
+  font-size: 15px;
   width: 100px;
   height: 50px;
   margin-top: 10px;
   margin-right: 10px;
+}
+
+button:hover {
+  border: 1px solid #48827F;
+  color:#48827F;
+  cursor: pointer;
 }
 
