--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,7 +1,7 @@
 .container {
-  max-width: 80rem;
+  max-width: 60rem;
   padding: 0 1rem;
-  margin: 2rem;
+  margin: 6rem auto 6rem;
 }
 
 .backToHome {
